# CHiPPS-ALPS

./: .gitattributes  .gitignore  .travis.yml  AlpsAllParam.cpp  AlpsData.cpp  AlpsDataPool.cpp  AlpsException.cpp  AlpsFunction.cpp  AlpsKnowledge.cpp  AlpsKnowledgeBroker.cpp  AlpsKnowledgeBrokerMPI.cpp  AlpsKnowledgeBrokerSerial.cpp  AlpsMainFun.cpp  AlpsMessage.cpp  AlpsModel.cpp  AlpsOwnParam.cpp  AlpsOwnParams.cpp  AlpsParameterBase.cpp  AlpsParams.cpp  AlpsSubTree.cpp  AlpsTreeNode.cpp  Dependencies  Externals  Externals.release  Externals.stable  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.Alps  Makefile.am  Makefile.config  Makefile.in  README  README.md  TODO  alps.pc.in  appveyor.yml  ar-lib  configure  (+2 more)
.coin-or/: Dependencies  config.yml  generate_readme  projDesc.xml
Alps/: AUTHORS  Makefile.am  Makefile.in  README  TODO  alps-uninstalled.pc.in  alps.pc.in  configure  configure.ac
Alps/MSVisualStudio/v10/: libAlps.vcxproj
Alps/MSVisualStudio/v8/: libAlps.vcproj
Alps/MSVisualStudio/v9/: libAlps.vcproj
Alps/examples/Abc/: AUTHORS  AbcBranchActual.cpp  AbcBranchActual.h  AbcBranchBase.cpp  AbcBranchBase.h  AbcCutGenerator.cpp  AbcCutGenerator.h  AbcHeuristic.cpp  AbcHeuristic.h  AbcMain.cpp  AbcMessage.cpp  AbcMessage.h  AbcModel.cpp  AbcModel.h  AbcNodeDesc.h  AbcParams.cpp  AbcParams.h  AbcSolution.cpp  AbcSolution.h  AbcTreeNode.cpp  AbcTreeNode.h  INSTALL  Makefile.in  README  abc.par.in
Alps/examples/Abc/MSVisualStudio/v10/: Abc.vcxproj
Alps/examples/Abc/MSVisualStudio/v8/: Abc.sln
Alps/examples/Abc/MSVisualStudio/v9/: Abc.sln  Abc.vcproj
Alps/examples/Abc/Win32/v8/: Abc.sln  Abc.vcproj
Alps/examples/Knap/: AUTHORS  INSTALL  KnapMain.cpp  KnapModel.cpp  KnapModel.h  KnapNodeDesc.cpp  KnapNodeDesc.h  KnapParams.cpp  KnapParams.h  KnapSolution.cpp  KnapSolution.h  KnapTreeNode.cpp  KnapTreeNode.h  Makefile.Knap  Makefile.in  README  TODO  knap.par  knap.par.in
Alps/examples/Knap/MSVisualStudio/v10/: Knap.sln  Knap.vcxproj
Alps/examples/Knap/MSVisualStudio/v8/: Knap.sln
Alps/examples/Knap/MSVisualStudio/v9/: Knap.sln
Alps/examples/Knap/Win32/v8/: Knap.vcproj
Alps/examples/Knap/data/: collectResults  hardKnapStat  input100_2.txt  input2.txt  input3.txt  input75_1.txt  knap.mod
Alps/examples/Knap/data/CVS/: Entries  Repository  Root
Alps/examples/Knap/data/Hard/: hardKnapStat  input100_30.txt  input100_42.txt  input100_43.txt  input150_50.txt  input150_51.txt
Alps/examples/Knap/data/easy/: input50_2.txt  input60_3.mps  input60_3.txt
Alps/examples/Knap/data/hard2/: input100_31.txt  input100_34.txt  input100_35.txt  input150_1.mps  input150_2.mps  input150_7.txt  input150_9.mps  input150_9.txt  stats
Alps/examples/Knap/data/unsolve/: input500_2.txt  stats
Alps/inc/: config_alps.h.in
Alps/src/: Alps.h  AlpsAix43.h  AlpsCompareActual.cpp  AlpsCompareActual.h  AlpsCompareBase.h  AlpsConfig.h  AlpsCygwin.h  AlpsEncoded.h  AlpsEnumProcessT.h  AlpsHelperFunctions.h  AlpsKnowledge.cpp  AlpsKnowledge.h  AlpsKnowledgeBroker.cpp  AlpsKnowledgeBroker.h  AlpsKnowledgeBrokerMPI.cpp  AlpsKnowledgeBrokerMPI.h  AlpsKnowledgeBrokerSerial.cpp  AlpsKnowledgeBrokerSerial.h  AlpsKnowledgePool.h  AlpsLicense.h  AlpsLinux.h  AlpsMACH.h  AlpsMessage.cpp  AlpsMessage.h  AlpsMessageTag.h  AlpsModel.cpp  AlpsModel.h  AlpsNodeDesc.h  AlpsNodePool.cpp  AlpsNodePool.h  AlpsOs.h  AlpsParameterBase.cpp  AlpsParameterBase.h  AlpsParams.cpp  AlpsParams.h  AlpsPriorityQueue.h  AlpsSearchStrategy.cpp  AlpsSearchStrategy.h  AlpsSearchStrategyBase.h  AlpsSolution.h  (+16 more)
Alps/test/: Makefile.am  Makefile.in
Doxygen/: AlpsAix43_8h.html  AlpsConfig_8h.html  AlpsConfig_8h__dep__incl.map  AlpsConfig_8h__dep__incl.md5  AlpsConfig_8h__incl.md5  AlpsConfig_8h_source.html  AlpsCygwin_8h_source.html  AlpsEncoded_8h.html  AlpsEncoded_8h__dep__incl.map  AlpsEncoded_8h__dep__incl.md5  AlpsEnumProcessT_8h__dep__incl.map  AlpsKnowledgeBrokerMPI_8h.html  AlpsKnowledgeBrokerSerial_8h.html  AlpsKnowledgeBrokerSerial_8h_source.html  AlpsKnowledgeBroker_8h.html  AlpsKnowledgeBroker_8h__dep__incl.map  AlpsKnowledgeBroker_8h__dep__incl.md5  AlpsKnowledgePool_8h__dep__incl.map  AlpsKnowledgePool_8h__dep__incl.md5  AlpsKnowledgePool_8h_source.html  AlpsKnowledge_8h.html  AlpsKnowledge_8h__dep__incl.map  AlpsKnowledge_8h__dep__incl.md5  AlpsKnowledge_8h_source.html  AlpsLicense_8h_source.html  AlpsMACH_8h.html  AlpsMACH_8h_source.html  AlpsMessageTag_8h.html  AlpsMessageTag_8h_source.html  AlpsMessage_8h__dep__incl.map  AlpsMessage_8h_source.html  AlpsModel_8h.html  AlpsModel_8h__dep__incl.map  AlpsModel_8h__dep__incl.md5  AlpsNodeDesc_8h__dep__incl.map  AlpsNodeDesc_8h__dep__incl.md5  AlpsNodeDesc_8h_source.html  AlpsOs_8h.html  AlpsParameterBase_8h.html  AlpsParameterBase_8h__dep__incl.map  (+264 more)
doxydoc/: doxygen.conf.in
include/: Alps.h  AlpsAix43.h  AlpsAllParam.h  AlpsCompareActual.h  AlpsCygwin.h  AlpsData.h  AlpsDataPool.h  AlpsEnumProcessT.h  AlpsEventHandler.h  AlpsException.h  AlpsFunction.h  AlpsHelperFunctions.h  AlpsKnowledge.h  AlpsKnowledgeBase.h  AlpsKnowledgeBroker.h  AlpsKnowledgeBrokerMPI.h  AlpsKnowledgeBrokerSerial.h  AlpsKnowledgePool.h  AlpsLicense.h  AlpsLinux.h  AlpsMACH.h  AlpsMainFun.h  AlpsMessage.h  AlpsMessageTag.h  AlpsModel.h  AlpsNodeDesc.h  AlpsOs.h  AlpsOwnParam.h  AlpsOwnParams.h  (+13 more)
src/: AlpsAix43.h  AlpsConfig.h  AlpsCygwin.h  AlpsEncoded.h  AlpsEnumProcessT.h  AlpsHelperFunctions.h  AlpsKnowledge.cpp  AlpsKnowledge.h  AlpsKnowledgeBroker.cpp  AlpsKnowledgeBroker.h  AlpsKnowledgeBrokerMPI.cpp  AlpsKnowledgeBrokerMPI.h  AlpsKnowledgeBrokerSerial.cpp  AlpsKnowledgeBrokerSerial.h  AlpsKnowledgePool.h  AlpsLicense.h  AlpsLinux.h  AlpsMACH.h  AlpsMessage.cpp  AlpsMessage.h  AlpsModel.cpp  AlpsModel.h  AlpsNodeDesc.h  AlpsNodePool.h  AlpsOs.h  AlpsParameterBase.cpp  AlpsParameterBase.h  AlpsParams.cpp  AlpsParams.h  AlpsPriorityQueue.h  AlpsSearchStrategy.cpp  AlpsSearchStrategy.h  AlpsSearchStrategyBase.h  AlpsSolution.h  AlpsSolutionPool.cpp  AlpsSolutionPool.h  AlpsSubTree.cpp  AlpsSubTree.h  AlpsSubTreePool.h  AlpsSunos.h  (+9 more)
test/: Makefile.am  Makefile.in
(+1751 files in other folders)
